--- a/index.html
+++ b/index.html
@@ -1,27 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<title>xeho91's website</title>
+
+		<link rel="icon" type="image/svg+xml" href="/images/favicon.svg">
+
+		<link rel="preload" as="font" type="font/woff2" href="/fonts/serif/Fraunces.woff2" crossorigin="anonymous">
+		<link rel="preload" as="font" type="font/woff2" href="/fonts/sans-serif/WorkSans.woff2" crossorigin="anonymous">
 	</head>
 
-	<body>
+	<body class="no-javascript">
 		<noscript>
-			<p>This website uses a JavaScript framework <a href="https://svelte.dev/">Svelte</a>.
+			<p>This website uses a JavaScript framework
+			<a href="https://svelte.dev/">Svelte</a>.
 			The source code of this website is available at the
 			<a href="https://github.com/xeho91/personal-website/">GitHub repository</a>.</p>
+
 			<p>Without JavaScript enabled, this website will not work.</p>
 		</noscript>
 
 		<script type="module">
-			import HMR from '@roxi/routify/hmr'
-			import App from "./src/App.svelte";
+			document.body.classList.remove("no-javascript");
 
-			const app = HMR(App, {
-				target: document.body,
-			}, 'routify-app');
+			import HMR from "@roxi/routify/hmr";
+			import App from "/src/App.svelte";
+
+			var app = HMR(
+				App,
+				{ target: document.body },
+				"svelte"
+			);
+
+			window.app = app;
 
 			export default app;
 		</script>
