refactor(config): ♻️  Reorganized config & apply changes

--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,7 @@
 
 	<body class="no-javascript">
 		<script>
-			document.body.removeAttribute("class");
+			document.body.classList.remove("no-javascript");
 		</script>
 
 		<div id="svelte" />
